@@ -1,5 +1,5 @@
 AUX 90vmware-server-console 76 RMD160 22fed127d20bfb758163443dcbd2879bf1d49be6 SHA1 105e3194c134b752a8d5cef1a23ae621cd835d80 SHA256 ff3abe9d58fd673d8f3d2f7e967aa6db426e3e15b4d868dc1483682357a928b8
 AUX vmware-server-console.xml 1592 RMD160 0d7e9ed13ebb3c73dd847e95fa95499296609e8c SHA1 02db2ee7ca0abb8b8793c9f56d858bb08c1c715f SHA256 56aafee80ad705e8d832f8853c36d763d37b87d1cb132a41c50eb63085ae854d
 DIST VMware-server-linux-client-1.0.8-126538.zip 23697857 RMD160 470b1b612ff55128a856da6025bb0b9130f42602 SHA1 20dc3e08eedabdd66fd6094fa5d17f1c37bb4d8e SHA256 cb81942ebea0551d32ae54fd9aa1f7d77a4c018729ea811cc65adba41e7ee683
-EBUILD vmware-server-console-1.0.8.126538.ebuild 2137 RMD160 0d4e77e3a883a8bb52e73c29fc83e729a853a4cc SHA1 0c4adfe6a5fded78217b6280ef83d0293e6f5788 SHA256 4274005bf781d7c7cebbf08c50fc606bca78700c7808b308e034ae4218b5810e
+EBUILD vmware-server-console-1.0.8.126538.ebuild 2140 RMD160 97406352fcb6c323f215c6db275d9c93f860f8df SHA1 7f081d4b4950796becf2014140779715e308e43f SHA256 d9c677e4ee20201837da02517ff5220c44ca07e6e8a8374ec8cfa3d8976b61f1
 MISC metadata.xml 159 RMD160 fc7f68a382390e5916b0fb43f37a893fad4f9798 SHA1 f46b02a39bcd0165558de67ff4256cfc812418a3 SHA256 8581ae1c90a48f50fa0542c7fb28cb8984baaf12f50fa18f33e467081effb215
